# making-ai-agents-showcase

./: .gitignore  .replit  README.md  analyze-all-implementations.py  catalogue-oss-agent-makers.sh  check-dependencies.sh  debug-zig.py  download_org_images.py  download_org_images_enhanced.py  extract-github-og-images.py  extract-og-images-v2.py  extract-og-images.py  og-extraction-progress.json  oss-agent-makers-catalogue.csv  oss-agent-makers-versions-v2.sh  oss-agent-makers-versions.sh  oss-agent-makers-with-images.csv  oss-agent-makers.csv  oss-agents.csv  test-file-count.prompt.txt  test-go-files.go  test-go-gitignore-thorough.go  test-ts-missing.ts  update-tech-writer-scripts.sh
noframework/haskell/: .gitignore  Main.hs  README.md  tech-writer.cabal  tech-writer.sh
noframework/python/: .gitignore  CLAUDE.md  conftest.py  pyproject.toml  tech-writer.py
noframework/python/common/: __init__.py  logging.py  tools.py  utils.py
noframework/python/docs/: backlog.md
noframework/python/docs/design/: e2e-worked-example.md  eval.md  infinite-scalability-v2.md  infinite-scalability.md  openrouter.md
noframework/python/docs/design/citation-eval/: tech-design.md
noframework/python/docs/design/proportional-complexity/: PRD.md  TECH_DESIGN.md  tasks.md
noframework/python/docs/designs/1/: tech-design.md
noframework/python/docs/designs/2/: tech-design.md
noframework/python/docs/designs/4/: tech-design.md
noframework/python/docs/features/1/: prd.md
noframework/python/docs/features/2/: prd.md
noframework/python/docs/features/3/: prd.md  tasks.md  tech-design.md
noframework/python/docs/features/4/: prd.md
noframework/python/docs/plans/1/: tasks.md
noframework/python/docs/plans/2/: tasks.md
noframework/python/docs/plans/3/: 3-1.md  3-2.md  3-3.md  3-4.md  3-5.md  3-6.md  3-7.md  3-8.md  3-9.md  tasks.md
noframework/python/docs/plans/4/: tasks.md
noframework/python/docs/plans/citation-eval/: 1.md  10.md  11.md  12.md  13.md  14.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  tasks.md
noframework/python/docs/plans/infinite-scalability-v2/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  (+11 more)
noframework/python/docs/reports/: 20251122-1850-audit.md  20251122-2154-audit.md  20251123-0404-sonnet-4.5-audit.md  20251123-0530-audit.md  20251123-1851-complexity-benchmarks.md  20251123-audit.md
noframework/python/docs/research/: code-base-complexity.md  live-sync-with-hooks.md  refactoring.md
noframework/python/infinite_scalability/: __init__.py  audit_cli.py  citations.py  claims.py  cli.py  coverage.py  dspy_pipeline.py  enforcement.py  eval.py  eval_runner.py  ingest.py  llm.py  models.py  orchestrator.py  parser.py  repair.py  retrieval.py  schema.py  store.py  summarize.py  validation.py
noframework/python/pocs/code-base-complexity/: PRD.md  TECH_DESIGN.md  complexity_analyzer.py  normalized_nodes.py  run_comparison.sh  tasks.md  test_repos.sh
noframework/python/prompts/: architecture-overview.prompt.txt  code-report-prompt.txt
noframework/python/scripts/manual/: task1_schema.py  task2_ingest.py  task3_summaries.py  task4_retrieval.py
noframework/python/tech_writer/: __init__.py  __main__.py  citations.py  cli.py  complexity.py  llm.py  logging.py  metadata.py  orchestrator.py  parser.py  repo.py  store.py
noframework/python/tech_writer/tools/: __init__.py  filesystem.py  semantic.py
noframework/python/test-output/: test.md  test.metadata.json
noframework/python/tests/: __init__.py  conftest.py  test_audit_cli.py  test_bdd.py  test_bdd_regression.py  test_citation_format.py  test_claims.py  test_cli.py  test_coverage.py  test_draft_enforcement.py  test_eval.py  test_ingest.py  test_integration_axios.py  test_orchestrator.py  test_parser.py  test_retrieval.py  test_retrieval_embeddings.py  test_retrieval_hybrid.py  test_retrieval_symbols.py  test_store.py  test_summarize.py  test_summary_validation.py
noframework/python/tests/features/: test_complexity_bdd.py  test_metadata_bdd.py  test_openrouter_bdd.py
noframework/python/tests/tech_writer/: __init__.py  conftest.py  test_complexity.py  test_complexity_integration.py  test_core.py  test_e2e.py  test_metadata.py  test_openrouter.py  test_openrouter_integration.py  test_openrouter_roundtrip.py
noframework/python/web/: __init__.py  harness.py
noframework/python/web/templates/: base.html  form.html  index.html
noframework/rust/: Cargo.toml  README.md  tech-writer.sh
noframework/rust/src/: main.rs
oss-agent-makers/atomic-agents/: README.md  README.metadata.json  hello.py  install.sh  metadata.json  pyproject.toml  tech-writer.py  test_prompt.txt
oss-agent-makers/dspy/: README.md  demo-customer-service.py  install.sh  metadata.json  pyproject.toml  tech-writer.py  test-prompt.txt
oss-agent-makers/langgraph/: basic-agent.py  hello.py  install.sh  metadata.json  pyproject.toml  run-agent.sh  tech-writer.py  tech-writer.sh
oss-agent-makers/pydantic-ai/: README.md  README.metadata.json  install.sh  metadata.json  pyproject.toml  simple-prompt.txt  tech-writer.py  tech-writer.sh  test-prompt.txt
(+525 files in other folders)
