[project]
name = "baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathspec>=0.11.0",
    "binaryornot>=0.4.4",
    "openai>=1.0.0",
    "tree-sitter-languages>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: marks tests that make real API calls",
    "slow: marks tests that take a long time to run",
]
