[package]
name = "tech-writer-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
chrono = "0.4"
anyhow = "1.0"
dirs = "5.0"
async-openai = "0.23"
ignore = "0.4"
