[project]
name = "tech-writer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomic-agents>=1.1.3",
    "binaryornot>=0.4.4",
    "google-genai>=1.20.0",
    "instructor>=1.8.3",
    "litellm>=1.72.4",
    "openai>=1.86.0",
    "pathspec>=0.12.1",
]
