[project]
name = "langgraph-swarm-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "pytz",
    "pathspec",
    "binaryornot",
    "langchain-google>=0.1.1",
    "langchain>=0.3.25",
]
